--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@paypal/paypal-server-sdk": "^1.1.0",
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -19,6 +21,7 @@
     "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
     "mongoose": "^8.16.3",
+    "nodemailer": "^7.0.5",
     "socket.io": "^4.8.1"
   }
 }
